# Test-Task

./: CMakeLists.txt  README.md
app/: CMakeLists.txt
app/include/: coordinator.h  input_handler.h  log_worker.h  message.h
app/include/interfaces/: Iinput_handler.h  Ilog_worker.h
app/src/: coordinator.cpp  input_handler.cpp  log_worker.cpp  main.cpp
include/: file_log_output.h  ilog_output.h  logger.h  socket_log_output.h
src/: file_log_output.cpp  logger.cpp  socket_log_output.cpp
tests/: CMakeLists.txt  main.cpp  unit_tests.cpp  unit_tests.h
